tests/snapshots/compile_file__underscore.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/underscore.bend
---
@const = (* 2)

@main = a
  & @const ~ (0 a)
