tests/snapshots/compile_file__underscore.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/underscore.hvm
---
@const = (* #2)

@main = a
  & @const ~ (#0 a)
