tests/snapshots/compile_file__unscoped_dup_use.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unscoped_dup_use.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/unscoped_dup_use.bend[0m[1m :[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Unscoped variable '$a' used more than once.
