tests/snapshots/compile_file__unscoped_dup_use.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unscoped_dup_use.hvm
---
In definition 'main':
  Unscoped variable '$a' used more than once

