tests/snapshots/compile_file__unscoped_supercombinator.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unscoped_supercombinator.hvm
---
@7 = (a ((a b) b))
@8 = (a ((a b) b))
@Foo = ((@7 (@8 a)) a)
@main = a
& @Foo ~ (* a)

