tests/snapshots/compile_file__unused_dup_var_linearization.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unused_dup_var_linearization.hvm
---
@main = (a a)

