tests/snapshots/compile_file__unused_let.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unused_let.bend
---
@main = ({$(:[+] $(b *)) {b a}} a)
