tests/snapshots/compile_file__unused_unscoped_bind.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unused_unscoped_bind.bend
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Unscoped variable from lambda 'λ$a' is never used.
