tests/snapshots/compile_file__unused_unscoped_bind.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unused_unscoped_bind.hvm
---
In definition 'main': Missing unscoped variable use for 'λ$a'
